Fix selection mobile

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,13 @@ body, html {
     background-color: #000000;
     overflow: hidden;
     font-family: "Arvo";
-    user-select: none;
+    -webkit-touch-callout:none;
+    -webkit-user-select:none;
+    -khtml-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select:none;
+    user-select:none;
+    -webkit-tap-highlight-color:rgba(0,0,0,0);
 }
 
 @keyframes scrollBg {
